<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="PRG_ILK" Id="{01cec7ee-0a1e-4d0a-98ae-432579a5cf6a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_ILK
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Evaluate Global Interlocks*)

//TwinscrewPumps_Valves_Closed := GEM1_VRC_60.q_stValve.i_xClsLS AND  GEM1_VRC_70.q_stValve.i_xClsLS AND GEM2_VRC_10.q_stValve.i_xClsLS AND GEM2_VRC_20.q_stValve.i_xClsLS;
US_MAA_OK := TRUE;
DS_MAA_OK := TRUE ;
US_Roughing_Valves_Open := (fb_AT1K0_GAS_VRC_50.i_xOpnLS AND fb_AT1K0_GAS_VRC_60.i_xOpnLS);
DS_Roughing_Valves_Open := (fb_AT1K0_GAS_VRC_90.iq_stValve.i_xOpnLS AND( fb_AT1K0_GAS_PMF_90.stPump.eState := pumpRUNNING)) OR   (fb_AT1K0_GAS_VRC_100.iq_stValve.i_xOpnLS AND (fb_AT1K0_GAS_PMF_100.stPump.eState := pumpRUNNING ));
US_Turbo_Valves_Open := fb_AT1K0_GAS_VRC_10.iq_stValve.i_xOpnLS AND  fb_AT1K0_GAS_VRC_20.iq_stValve.i_xOpnLS AND fb_AT1K0_GAS_VRC_30.iq_stValve.i_xOpnLS AND fb_AT1K0_GAS_VRC_40.iq_stValve.i_xOpnLS;
DS_Turbo_Valves_Open := fb_AT1K0_GAS_VRC_110.iq_stValve.i_xOpnLS AND  fb_AT1K0_GAS_VRC_120.iq_stValve.i_xOpnLS AND fb_AT1K0_GAS_VRC_130.iq_stValve.i_xOpnLS AND fb_AT1K0_GAS_VRC_140.iq_stValve.i_xOpnLS; 
US_Turbo_Running := (fb_AT1K0_GAS_PTM_10.iq_stPtm.eState = pumpRUNNING) AND (fb_AT1K0_GAS_PTM_20.iq_stPtm.eState = pumpRUNNING) AND (fb_AT1K0_GAS_PTM_30.iq_stPtm.eState = pumpRUNNING) AND (fb_AT1K0_GAS_PTM_40.iq_stPtm.eState = pumpRUNNING);
DS_Turbo_Running := (fb_AT1K0_GAS_PTM_110.iq_stPtm.eState = pumpRUNNING) AND (fb_AT1K0_GAS_PTM_120.iq_stPtm.eState = pumpRUNNING) AND (fb_AT1K0_GAS_PTM_130.iq_stPtm.eState = pumpRUNNING) AND (fb_AT1K0_GAS_PTM_140.iq_stPtm.eState = pumpRUNNING); (*MG 03.09.20 Turbo is failing, but injection can run without it*)

//xGEM1_AperturesOpnOK := NOT GEM1_VVC_40.iq_stValve.q_xOPN_DO AND NOT GATT_VVC_10.iq_stValve.q_xOPN_DO; //AND VCN is closed 
//xGEM2_AperturesOpnOK := NOT GEM2_VVC_40.iq_stValve.q_xOPN_DO AND NOT GATT_VVC_10.iq_stValve.q_xOPN_DO; //AND VCN is closed 

(* Link The correct override bit to the correct vacuum section*)



(*P/MPS FF*)

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>